--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-Flask==2.3.2
-keras==2.12.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-joblib==1.3.2
-gunicorn==20.1.0
-scipy==1.10.1
+Flask==3.0.2
+pandas==2.0.2
+scikit-learn==1.2.2
+numpy==1.24.3  # Required for scikit-learn 1.2.2
 setuptools==69.5.1  # Explicitly add setuptools
